--- a/src/app/pages/extrapages/profile/profile/profile.component.html
+++ b/src/app/pages/extrapages/profile/profile/profile.component.html
@@ -1767,13 +1767,13 @@
                             </div>
                         </ng-template>
                     </li>
-                    <li [ngbNavItem]="3" class="nav-item">
+                    <li [ngbNavItem]="3" class="nav-item" [disabled]="true">
                         <a ngbNavLink class="nav-link" data-bs-toggle="tab" role="tab">
                             <i class="ri-price-tag-line d-inline-block d-md-none"></i> <span
                                 class="d-none d-md-inline-block">Proyectos</span>
                         </a>
                         <ng-template ngbNavContent>
-                            <div class="card">
+                            <!--<div class="card">
                                 <div class="card-body">
                                     <div class="row">
                                         <div class="col-xxl-3 col-sm-6" *ngFor="let data of ListJsList | async">
@@ -1826,10 +1826,8 @@
                                                         </div>
                                                     </div>
                                                 </div>
-                                                <!-- end card body -->
                                             </div>
-                                            <!-- end card -->
-                                        </div><!--end col-->
+                                        </div>
                                         <div class="col-lg-12">
                                             <div class="mt-4">
                                                 <ul class="pagination pagination-separated justify-content-center mb-0">
@@ -1839,9 +1837,9 @@
                                                 </ul>
                                             </div>
                                         </div>
-                                    </div><!--end row-->
-                                </div><!--end card-body-->
-                            </div><!--end card-->
+                                    </div>
+                                </div>
+                            </div>-->
                         </ng-template>
                     </li>
                     <li [ngbNavItem]="4" class="nav-item" [disabled]="true">
@@ -1939,9 +1937,9 @@
                     </li>
                 </ul>
                 <div class="flex-shrink-0">
-                    <a routerLink="/pages/profile-setting" class="btn btn-success"><i
+                    <a (click)="editarPerfil()" class="btn btn-success"><i
                             class="ri-edit-box-line align-bottom"></i> Editar Perfil</a>
-                </div>
+                </div><!--routerLink="/pages/profile-setting"-->
             </div>
             <!-- Tab panes -->
             <div class="tab-content pt-4 text-muted">
