--- a/src/app/pages/extrapages/profile/settings/settings.component.html
+++ b/src/app/pages/extrapages/profile/settings/settings.component.html
@@ -224,8 +224,8 @@
                                     <div class="col-lg-12">
                                         <div class="hstack gap-2 justify-content-end">
                                             <button type="submit" class="btn btn-primary">Modificar</button>
-                                            <button routerLink="/pages/profile" type="button" class="btn btn-soft-success">Cancelar</button>
-                                        </div>
+                                            <button (click)="regresar()" type="button" class="btn btn-soft-success">Cancelar</button>
+                                        </div><!--routerLink="/pages/profile"-->
                                     </div><!--end col-->
                                 </div><!--end row-->
                             </form>
