validar no existen otras obligaciones

--- a/src/app/pages/dashboards/project-dashboard/project-resumen/project-resumen.component.html
+++ b/src/app/pages/dashboards/project-dashboard/project-resumen/project-resumen.component.html
@@ -492,11 +492,11 @@
                         
                                                 <h4>Otras obligaciones</h4>
                                                 
-                                                <!--<div style="height: 266px;
+                                                <div style="height: 266px;
                                                         display: grid;
                                                         place-items: center;" *ngIf="!getDataExist(simpleDonutChartOtros.series)">
                                                         <h4>No existe información</h4>
-                                                </div>-->
+                                                </div>
                                                 
                                                 <apx-chart [series]="simpleDonutChartOtros.series" [chart]="simpleDonutChartOtros.chart"
                                                 [labels]="simpleDonutChartOtros.labels" [responsive]="simpleDonutChartOtros.responsive"
