--- a/src/app/pages/dashboards/project-dashboard/project-resumen/project-resumen.component.html
+++ b/src/app/pages/dashboards/project-dashboard/project-resumen/project-resumen.component.html
@@ -532,7 +532,7 @@
                                         </div>
                                         <div class="card-body p-0">
                                             <div>
-                                                <apx-chart [series]="getSeries(criticidad, basicBarChartGeneral)" [colors]="basicBarChartGeneral.colors"
+                                                <apx-chart [series]="getSeriesArea(criticidad, basicBarChartGeneral)" [colors]="basicBarChartGeneral.colors"
                                                     [chart]="getChart(criticidad, basicBarChartGeneral.chart)" [dataLabels]="basicBarChartGeneral.dataLabels"
                                                     [plotOptions]="basicBarChartGeneral.plotOptions" dir="ltr"
                                                     [xaxis]="basicBarChartGeneral.xaxis" [yaxis]="basicBarChartGeneral.yaxis" [stroke]="basicBarChartGeneral.stroke"
@@ -552,7 +552,7 @@
                                             
                                             <h4>Permisos por área</h4>
 
-                                                <apx-chart [series]="getSeries(criticidad, basicBarChartPermisos)" [colors]="basicBarChartPermisos.colors"
+                                                <apx-chart [series]="getSeriesArea(criticidad, basicBarChartPermisos)" [colors]="basicBarChartPermisos.colors"
                                                 [chart]="getChart(criticidad, basicBarChartPermisos.chart)" [dataLabels]="basicBarChartPermisos.dataLabels"
                                                     [plotOptions]="basicBarChartPermisos.plotOptions" dir="ltr"
                                                     [xaxis]="basicBarChartPermisos.xaxis" [yaxis]="basicBarChartPermisos.yaxis" [stroke]="basicBarChartPermisos.stroke"
@@ -569,7 +569,7 @@
                                                 
                                                 <h4>Reportes por área</h4>
     
-                                                    <apx-chart [series]="getSeries(criticidad, basicBarChartReportes)" [colors]="basicBarChartReportes.colors"
+                                                    <apx-chart [series]="getSeriesArea(criticidad, basicBarChartReportes)" [colors]="basicBarChartReportes.colors"
                                                         [chart]="getChart(criticidad, basicBarChartReportes.chart)" [dataLabels]="basicBarChartReportes.dataLabels"
                                                         [plotOptions]="basicBarChartReportes.plotOptions" dir="ltr" 
                                                         [xaxis]="basicBarChartReportes.xaxis" [yaxis]="basicBarChartReportes.yaxis" [stroke]="basicBarChartReportes.stroke"
@@ -590,7 +590,7 @@
                                             
                                             <h4>Monitoreos por área</h4>
 
-                                                <apx-chart [series]="getSeries(criticidad, basicBarChartMonitoreos)" [colors]="basicBarChartMonitoreos.colors"
+                                                <apx-chart [series]="getSeriesArea(criticidad, basicBarChartMonitoreos)" [colors]="basicBarChartMonitoreos.colors"
                                                     [chart]="getChart(criticidad, basicBarChartMonitoreos.chart)" [dataLabels]="basicBarChartMonitoreos.dataLabels"
                                                     [plotOptions]="basicBarChartMonitoreos.plotOptions" dir="ltr" 
                                                     [xaxis]="basicBarChartMonitoreos.xaxis" [yaxis]="basicBarChartMonitoreos.yaxis" [stroke]="basicBarChartMonitoreos.stroke"
@@ -607,7 +607,7 @@
                                                 
                                                 <h4>Otras Obligaciones por área</h4>
     
-                                                    <apx-chart [series]="getSeries(criticidad, basicBarChartOtros)" [colors]="basicBarChartOtros.colors"
+                                                    <apx-chart [series]="getSeriesArea(criticidad, basicBarChartOtros)" [colors]="basicBarChartOtros.colors"
                                                         [chart]="getChart(criticidad, basicBarChartOtros.chart)" [dataLabels]="basicBarChartOtros.dataLabels"
                                                         [plotOptions]="basicBarChartOtros.plotOptions" dir="ltr"
                                                         [xaxis]="basicBarChartOtros.xaxis" [yaxis]="basicBarChartOtros.yaxis" [stroke]="basicBarChartOtros.stroke"
@@ -618,8 +618,6 @@
                                         </div>
                                         </div>
                                 </div>
-
-                                
 
                                 <div class="row mb-3 align-items-center justify-content-center">
                                     
